src/component/Navbar/Navbar.scss
.navbar{
  padding-top: 6px;
  padding-bottom: 6px;
  @include media-breakpoint-up(lg) {
    padding-top: 8px;
    padding-bottom: 8px;
  }
}
.search-bar {
  width: 240px;
  height: 40px;
}
.searchbar-icon {
  z-index: 1000;
  position: absolute;
  left: calc(0% + 12px);
  font-weight: 300;
}
.homepage-dropdown{
  transform: translate(-48px,38px);
  min-width: 152px;
  li:not(:last-child){
    margin-bottom: 16px;
  }
  .dropdown-item:hover{
    color: $primary;
  }
}
.avatar {
  width: 40px;
  height: 40px;
}

